tests/paczka1/fuzzy1/78277127.err
Error in line 6: d18NYCvW72Y S5 19,2
Error in line 7: d18NYCvW72Y S41 50,8
Error in line 16: aXkIU S5 95,9
Error in line 18: aXkIU S41 55,6
Error in line 29: p7o S41 19,12
